[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/environment/ground/Ground Effect.gd" type="Script" id=1]
[ext_resource path="res://lib/StyleBox2D.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 101.0

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
bg_color = Color( 0.12549, 0.572549, 0.615686, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.12549, 0.572549, 0.615686, 0.5 )
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CircleTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area/CircleShape:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade-in"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("CircleTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.420448, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area/CircleShape:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.42, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="Ground Effect" type="Node2D"]
script = ExtResource( 1 )
color = Color( 0.12549, 0.572549, 0.615686, 1 )
size = 200

[node name="Area" type="Area2D" parent="."]
visible = false
collision_layer = 0
monitorable = false

[node name="CircleShape" type="CollisionShape2D" parent="Area"]
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 1 )

[node name="CircleTexture" type="Node2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
script = ExtResource( 2 )
size = Vector2( 200, 200 )
style_box = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fade-in = SubResource( 4 )

[connection signal="body_entered" from="Area" to="." method="_on_ground_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_ground_exited"]
